Implemented an option to simplify an itinerary track
Added a `goto page` option to all paging controls.  The `goto page` option is
only shown once there are at least 10 pages.

- Format numerical values with commas on `System Status` page.
- Update `nodemon` package to newer version.

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -239,5 +239,8 @@ input.days, input.minutes, input.hours {
 div#itineraries-div-form-buttons {
   margin-bottom: 5px;
 }
+.tl-goto-page {
+  margin-bottom: 20px;
+}
 /* Fix for href attributes inside accordion etc. http://angular-ui.github.io/bootstrap/versioned-docs/2.4.0/ */
 .nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
