--- a/app/partials/itinerary-search-result.html
+++ b/app/partials/itinerary-search-result.html
@@ -126,6 +126,13 @@
       show-first-last="true"
       paging-action="doPagingAction('Paging clicked', page, pageSize, total)">
     </paging>
+    <goto-page
+      page="page"
+      page-size="pageSize"
+      total="totalCount"
+      minimum-pages="10"
+      paging-action="doPagingAction('go', page, pageSize, total)">
+    </goto-page>
   </div>
   <div>
     <div ng-messages="messages">
