--- a/app/partials/itinerary-sharing.html
+++ b/app/partials/itinerary-sharing.html
@@ -27,6 +27,13 @@
           show-first-last="true"
           paging-action="doPagingAction('Paging Clicked', page, pageSize, total)">
         </paging>
+        <goto-page
+          page="page"
+          page-size="pageSize"
+          total="totalCount"
+          minimum-pages="10"
+          paging-action="doPagingAction('go', page, pageSize, total)">
+        </goto-page>
         <div id="div-buttons">
           <button id="btn-activate" ng-click="activate()" class="btn btn-lg btn-success">Activate</button>
           <button id="btn-deactivate" ng-click="deactivate()" class="btn btn-lg btn-primary">Deactivate</button>
