--- a/app/partials/tracks.html
+++ b/app/partials/tracks.html
@@ -47,8 +47,15 @@
            hide-if-empty="true"
            show-prev-next="true"
            show-first-last="true"
-           paging-action="DoPagingAction('Paging Clicked', page, pageSize, total)">
+           paging-action="doPagingAction('Paging Clicked', page, pageSize, total)">
         </paging>
+        <goto-page
+          page="page"
+          page-size="pageSize"
+          total="totalCount"
+          minimum-pages="10"
+          paging-action="doPagingAction('go', page, pageSize, total)">
+        </goto-page>
       </div>
     </div>
   </div>
